--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,8 @@ jobs:
 
     - name: Connecting ngrok Account
       run: .\ngrok\ngrok.exe authtoken 2U61nL2CWXcVgLPufvFYJhwpBre_Dx1hKhkcK5yWkcwM7RW2
+
+    - name: setting
       run: .\ngrok\ngrok.exe --region=ap
 
     - name: Enable RDP Access
