--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       run: .\ngrok\ngrok.exe authtoken 2U61nL2CWXcVgLPufvFYJhwpBre_Dx1hKhkcK5yWkcwM7RW2
 
     - name: setting
-      run: .\ngrok\ngrok.exe --region=ap
+      run: .\ngrok\ngrok.exe tcp 5900  --region=ap 
 
     - name: Enable RDP Access
       run: |
