--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       run: Expand-Archive ngrok.zip
 
     - name: Connecting ngrok Account
-      run: .\ngrok\ngrok.exe authtoken 2U61nL2CWXcVgLPufvFYJhwpBre_Dx1hKhkcK5yWkcwM7RW2
+      run: .\ngrok\ngrok.exe add-authtoken 2U61nL2CWXcVgLPufvFYJhwpBre_Dx1hKhkcK5yWkcwM7RW2
 
     
     - name: Enable RDP Access
